--- a/notebooks/1_SpoTwoFy_Playlist_Extraction.ipynb
+++ b/notebooks/1_SpoTwoFy_Playlist_Extraction.ipynb
@@ -12,7 +12,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "iYMyCXvP-kiE",
         "colab": {
@@ -36,7 +36,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {
         "id": "TWU4haB9YmK8"
       },
@@ -62,7 +62,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -87,7 +87,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "H51qfqV029qX"
       },
@@ -101,7 +101,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {
         "id": "htO5CKb92vKa"
       },
@@ -113,29 +113,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": null,
       "metadata": {
         "id": "jKJOc8A73B1V"
       },
       "outputs": [],
       "source": [
-        "client_id = 'ecf55d3b31964b53af6841e39dfebcb2'"
+        "client_id = 'xxx'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": null,
       "metadata": {
         "id": "gjQtvRZn3BtT"
       },
       "outputs": [],
       "source": [
-        "client_secret = '73eb4ae7d6774f0e8d67ec2da2d9e5a8'"
+        "client_secret = 'xxx'"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": null,
       "metadata": {
         "id": "lrsSmCTL2vKa"
       },
@@ -148,7 +148,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 17,
+      "execution_count": null,
       "metadata": {
         "id": "MuDZ113z_CTQ"
       },
@@ -172,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 18,
+      "execution_count": null,
       "metadata": {
         "id": "lSJWDVyO0zRo"
       },
@@ -207,7 +207,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 19,
+      "execution_count": null,
       "metadata": {
         "id": "Azc_k76wHYTD"
       },
@@ -241,7 +241,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 20,
+      "execution_count": null,
       "metadata": {
         "id": "4mVCkhkI_LfK"
       },
@@ -294,7 +294,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 21,
+      "execution_count": null,
       "metadata": {
         "id": "ME-UNZiwYmK-"
       },
@@ -315,7 +315,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -348,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 23,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -393,7 +393,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 24,
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -730,7 +730,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "0cf8o1wYEXWx"
       },
@@ -766,7 +766,7 @@
         "id": "VY6J6MLaSGrg",
         "outputId": "4420c4e5-f9fc-4b71-f487-2cdfd2d8759d"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1243,7 +1243,7 @@
       "metadata": {
         "id": "sJHOU-DdW28e"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1257,7 +1257,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 28,
+      "execution_count": null,
       "metadata": {
         "id": "5tuXr_erIlDk",
         "colab": {
@@ -1284,7 +1284,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 29,
+      "execution_count": null,
       "metadata": {
         "id": "AQ5Z-vxAJGG0",
         "colab": {
@@ -1318,7 +1318,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 30,
+      "execution_count": null,
       "metadata": {
         "id": "YGZGJYNLJGJO",
         "colab": {
@@ -1811,7 +1811,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 31,
+      "execution_count": null,
       "metadata": {
         "id": "2rJ_RCXhJGLY"
       },
@@ -1823,7 +1823,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 32,
+      "execution_count": null,
       "metadata": {
         "id": "MvNbo3a7IlFx",
         "colab": {
@@ -2454,7 +2454,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 33,
+      "execution_count": null,
       "metadata": {
         "id": "IUplcvc2YmK-",
         "scrolled": true,
@@ -2899,7 +2899,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {
         "id": "rW9qvZy9-X1-"
       },
